--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Lista de Tarefas</title>
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>
+    <body class="bg">
             <div>
                 <h1>Lista de Tarefas</h1>
             </div>
 
             <div>
-                <p id="first">Insira texto no campo de entrada para adicionar itens à sua lista.</p>
-                <p id="second">Clique no item para marcá-lo como atividade concluída.</p>
-                <p id="third">Clique no "X" para remover o item da sua lista.</p>
+                <h2>Insira texto no campo de entrada para adicionar itens à sua lista.</h2>
+                <h3>Clique no item para marcá-lo como atividade concluída.</h3>
+                <p>Clique no "X" para remover o item da sua lista.</p>
             </div>
 
-            <div>
-                <input id="userInput" type="text" placeholder="Nova Tarefa..." maxlength="27">
+            <div class="container">
+                <input id="userInput" type="text" placeholder="Nova tarefa..." maxlength="100">
                 <button id="enter"><i class=""><img src="img/pencil.png"></i></button>
             </div>
 
-            <div>
+            <div class="tarefas">
                 <ul id="ul">
                 </ul>
             </div>
