Finalizando a estilização da página

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
 
             <div>
-                <h2>Insira texto no campo de entrada para adicionar itens à sua lista.</h2>
+                <h2>Insira o texto no campo de entrada para adicionar itens à sua lista.</h2>
                 <h3>Clique no item para marcá-lo como atividade concluída.</h3>
                 <p>Clique no "X" para remover o item da sua lista.</p>
             </div>
